# noorm

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  test.sh
.github/workflows/: on_push.yml
noorm/: __init__.py  _common.py  _db_api_2.py  _db_api_2_args_only.py  _sqlalchemy_common.py  _sqlite_common.py  registry.py
noorm/aiomysql/: __init__.py  _aiomysql.py
noorm/aiosqlite/: __init__.py  _aiosqlite.py
noorm/asyncpg/: __init__.py  _asyncpg.py
noorm/psycopg2/: __init__.py  _psycopg2.py
noorm/pymysql/: __init__.py  _pymysql.py
noorm/sqlalchemy_async/: __init__.py  _sqlalchemy_async.py
noorm/sqlalchemy_sync/: __init__.py  _sqlalchemy_sync.py
noorm/sqlite3/: __init__.py  _sqlite3.py
tests/: test_aiomysql.py  test_aiosqlite.py  test_asyncpg.py  test_psycopg2.py  test_pymysql.py  test_registry.py  test_sqlalchemy_async.py  test_sqlalchemy_sync.py  test_sqlite3.py
tests/subdir/: some_module.py
