[tool.poetry]
name = "noorm"
version = "0.1.0"
description = "NoORM (Not only ORM) - make your database operations convenient and natural"
authors = ["Alexander Maslyeav <maslyaev@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/amaslyaev/noorm/"
repository = "https://github.com/amaslyaev/noorm/"
documentation = ""
keywords = ["database", "sql", "orm", "sqlite", "postgres", "postgresql", "mysql"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3"
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
black = "^22.8.0"
mypy = "^0.982"
SQLAlchemy = "^1.4.31"
asyncpg = "^0.27.0"
sqlalchemy2-stubs = "^0.0.2a35"
pytest-asyncio = "^0.21.1"
aiosqlite = "^0.19.0"
psycopg2-binary = "^2.9.9"
pymysql = "^1.1.0"
types-pymysql = "^1.1.0.1"
aiomysql = "^0.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = "sqlalchemy.ext.mypy.plugin"
ignore_missing_imports = true
show_error_codes = true
follow_imports = "silent"
