[tool.poetry]
name = "true-noorm"
packages = [{ include = "noorm" }]
version = "0.1.7"
description = "NoORM (Not only ORM) - make your database operations convenient and natural"
authors = ["Alexander Maslyeav <maslyaev@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/amaslyaev/noorm/"
repository = "https://github.com/amaslyaev/noorm/"
documentation = ""
keywords = ["database", "sql", "orm", "noorm", "sqlite", "postgres", "postgresql", "mysql"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
flake8 = "^7.0.0"
black = "^24.4.0"
mypy = "^1.9.0"
SQLAlchemy = "^1.4.31"
asyncpg = "^0.29.0"
sqlalchemy2-stubs = "^0.0.2a35"
pytest-asyncio = "^0.23.6"
aiosqlite = "^0.20.0"
psycopg2-binary = "^2.9.9"
pymysql = "^1.1.0"
types-pymysql = "^1.1.0.1"
aiomysql = "^0.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = "sqlalchemy.ext.mypy.plugin"
ignore_missing_imports = true
show_error_codes = true
follow_imports = "silent"
